[tool.poetry]
name = "python-speed-test"
version = "0.1.0"
description = "A Python code written to test your internet speed. More of a proof of concept as wifi speeds change so frequently that this will not be the most reliable internet speed tester."
authors = ["Aidan <legotrain2008@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.2.0"
urllib3 = "^1.26.12"
speedtest-cli = "^2.1.3"
rich = "^13.3.1"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
